# knowledgebase

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  Knowledge Base Search.html  README.md  docker-compose.yml  pyproject.toml  thoughts.md
config/: settings.yaml  taxonomy.yaml  机台setup_header.csv  机台报警_header.csv  设备经验_header.csv
config/knowledge_types/: alarm.yaml  experience.yaml  setup.yaml
docs/: ai_chat_architecture.md  ai_chat_architecture_zh.md  import_pipeline_architecture.md  import_pipeline_architecture_zh.md
elasticsearch/: Dockerfile
src/kb/: __main__.py  config.py  main.py
src/kb/api/: chat.py  deps.py  documents.py  facets.py  ingest.py  search.py
src/kb/es/: body_builder.py  client.py  import_mappings.py  mappings.py  migrations.py
src/kb/models/: document.py  ingest.py  search.py  taxonomy.py
src/kb/services/: csv_loader.py  embedding.py  extraction.py  file_tracker.py  import_pipeline.py  indexing.py  ocr.py  search.py  seed.py  segmentation.py  spec.py  taxonomy.py
tests/integration/: conftest.py  test_indexing_and_search.py
tests/unit/: test_body_builder.py  test_document_validation.py  test_extraction.py  test_indexing_validation.py  test_search_models.py  test_search_queries.py  test_segmentation_parse.py  test_segmentation_routing.py  test_spec.py  test_taxonomy.py
